<ui version="4.0" >
 <class>WdgLensCorrectionOptions</class>
 <widget class="QWidget" name="WdgLensCorrectionOptions" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>235</width>
    <height>207</height>
   </rect>
  </property>
  <layout class="QGridLayout" >
   <property name="margin" >
    <number>0</number>
   </property>
   <property name="spacing" >
    <number>6</number>
   </property>
   <item row="2" column="0" >
    <spacer>
     <property name="orientation" >
      <enum>Qt::Vertical</enum>
     </property>
     <property name="sizeType" >
      <enum>QSizePolicy::Expanding</enum>
     </property>
     <property name="sizeHint" >
      <size>
       <width>20</width>
       <height>90</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="0" column="2" >
    <spacer>
     <property name="orientation" >
      <enum>Qt::Horizontal</enum>
     </property>
     <property name="sizeType" >
      <enum>QSizePolicy::Expanding</enum>
     </property>
     <property name="sizeHint" >
      <size>
       <width>16</width>
       <height>20</height>
      </size>
     </property>
    </spacer>
   </item>
   <item row="0" column="0" colspan="2" >
    <widget class="QGroupBox" name="groupBox1" >
     <property name="title" >
      <string>Distortion Correction</string>
     </property>
     <layout class="QGridLayout" >
      <property name="margin" >
       <number>0</number>
      </property>
      <property name="spacing" >
       <number>6</number>
      </property>
      <item row="5" column="1" >
       <widget class="QLabel" name="Center_3" >
        <property name="text" >
         <string>Y:</string>
        </property>
        <property name="wordWrap" >
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item rowspan="2" row="3" column="1" >
       <widget class="QLabel" name="Center_2" >
        <property name="text" >
         <string>X:</string>
        </property>
        <property name="wordWrap" >
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="3" column="2" colspan="2" >
       <widget class="QSpinBox" native="1" name="intXCenter" />
      </item>
      <item rowspan="2" row="4" column="2" colspan="2" >
       <widget class="QSpinBox" native="1" name="intYCenter" />
      </item>
      <item row="3" column="0" >
       <spacer>
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeType" >
         <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" >
         <size>
          <width>16</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item row="3" column="4" >
       <spacer>
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeType" >
         <enum>QSizePolicy::Expanding</enum>
        </property>
        <property name="sizeHint" >
         <size>
          <width>51</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item row="0" column="0" colspan="3" >
       <widget class="QLabel" name="textLabel1" >
        <property name="text" >
         <string>Near center:</string>
        </property>
        <property name="wordWrap" >
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="1" column="0" colspan="3" >
       <widget class="QLabel" name="textLabel2" >
        <property name="text" >
         <string>Near edges:</string>
        </property>
        <property name="wordWrap" >
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="2" column="0" colspan="4" >
       <widget class="QLabel" name="Center" >
        <property name="text" >
         <string>Center:</string>
        </property>
        <property name="wordWrap" >
         <bool>false</bool>
        </property>
       </widget>
      </item>
      <item row="0" column="3" colspan="2" >
       <widget class="QDoubleSpinBox" native="1" name="dblCorrectionNearCenter" />
      </item>
      <item row="1" column="3" colspan="2" >
       <widget class="QDoubleSpinBox" native="1" name="dblCorrectionNearEdges" />
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0" >
    <widget class="QLabel" name="textLabel2_2_2" >
     <property name="text" >
      <string>Brightness correction:</string>
     </property>
     <property name="wordWrap" >
      <bool>false</bool>
     </property>
    </widget>
   </item>
   <item row="1" column="1" >
    <widget class="QDoubleSpinBox" native="1" name="dblBrightness" />
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11" />
  <customwidgets>
  <customwidget>
   <class>QDoubleSpinBox</class>
   <extends>QWidget</extends>
   <container>1</container>
  </customwidget>
  <customwidget>
   <class>QSpinBox</class>
   <extends>QWidget</extends>
   <container>1</container>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
